[3.6] bpo-20216: Correct docstrings of digest() methods in hashlib. (GH-9873). (cherry picked from commit f192aeb95a139ede74d69e39c046c498ff288a37)

Co-authored-by: Srinivas  Thatiparthy (శ్రీనివాస్  తాటిపర్తి) <srinivasreddy@users.noreply.github.com>